--- a/_sliderFW.scss
+++ b/_sliderFW.scss
@@ -99,7 +99,7 @@ $minPadding : 45px;
   .content--v--top &{align-items: flex-start;}
   .content--v--bottom &{align-items: flex-end;}
 
-  p{max-width: body(line-height)*45ch; }
+  // p{max-width: body(line-height)*45ch; }
 
   @each $key, $value in $colors{
     .content__bg--#{$key} &:after{@include pseudo(); top: 0; left: 0; width: 100%; height: 100%; z-index: -1; background-color: $value;}
