--- a/_sliderFW.scss
+++ b/_sliderFW.scss
@@ -18,7 +18,7 @@ $minPadding : 45px;
   }
 }
 .sliderFW__container{ position: relative; height: inherit; overflow: hidden; }
-.sliderFW__rail{display: flex; height: 100%; left: 0; width: 100%; position: absolute; 
+.sliderFW__rail{display: flex; height: 100%; left: 0; width: 100%; position: absolute; height: inherit;
   transition: transform 1000ms;
   &.multiple{gap: $spacing;}
 }
