--- a/_sliderFW.scss
+++ b/_sliderFW.scss
@@ -46,21 +46,9 @@ $minPadding : 45px;
   .sliderFW[data-duration]:not([data-duration=""]) &{transition-duration: inherit;}
 }
 .sliderFW__subitem{position: relative; height: inherit;}
-.sliderFW__item__bg{width: 100%; height: 100%; @extend %img-container;
-  // & img{@include object-fit(cover); width: 100%;height: 100%; }
+.sliderFW__item__bg{width: 100%; height: 100%; @include img-container(cover);
   @for $index from 0 through 10 {
     .img__opacity--#{$index} &{opacity: $index*.1;}
-  }
-  @each $side_1 in $sides {
-    @if $side_1 == 'left' or $side_1 == 'right' {
-      .img--#{$side_1} & img{ object-fit: cover; object-position:#{$side_1}; }
-      @each $side_2 in $sides {
-        @if $side_2 == 'top' or $side_2 == 'bottom' {
-          .img--#{$side_2} & img{ object-fit: cover; object-position:#{$side_2}; }
-          .img--#{$side_1}.img--#{$side_2} & img{ object-fit: cover; object-position:#{$side_1+' '+$side_2}; }
-        }
-      }
-    }
   }
 }
 .sliderFW__item__content{
