--- a/_sliderFW.scss
+++ b/_sliderFW.scss
@@ -1,151 +1,213 @@
-$minPadding : 45px;
-
-.sliderFW{margin-bottom: $spacing; padding: 0;  font-size: 1.25rem; font-weight: 300; position: relative;
-  @for $index from 1 through 6{
-    .sliderFW__item__title{margin-bottom: 0.5rem;}
-    &.title--1, .title--1{
-      .sliderFW__item__title{font-size:3.5rem;font-size: calc(1.2rem + 2vw); line-height: 1.2;font-weight: 300;}
-    }
-    &.title--2, .title--2{
-      .sliderFW__item__title{font-size:4rem;font-size: calc(1.2rem + 2.5vw); line-height: 1.2;font-weight: 300;}
-    }
-    &.title--3, .title--3{
-      .sliderFW__item__title{font-size:4.5rem;font-size: calc(1.2rem + 3vw); line-height: 1.2;font-weight: 300;}
-    }
-    &.title--4, .title--4{
-      .sliderFW__item__title{font-size:5rem;font-size: calc(1.2rem + 3.5vw); line-height: 1.2;font-weight: 300;}
-    }
-  }
-
-
-  &[data-nbitems]:not([data-nbitems=""]):not([data-nbitems="1"]){
-    &:not(.loaded){
-      .sliderFW__item{opacity: 0;pointer-events: none;}
-    }
+.sliderFW{
+  --item-active: 0;
+  --transition-duration: 500ms;
+  --transition-function: ease;
+  --items-per-row: 1;
+  --items-min-width: 1;
+  --items-gap: 0px;
+  display: flex; 
+  overflow: hidden;
+  &.debug{
+    background: cyan;
+    outline: 10px dashed red;
+    outline-offset: 2px;
+    overflow: visible;
   }
 }
-.sliderFW__container{ position: relative; height: inherit; overflow: hidden; }
-.sliderFW__rail{display: flex; height: 100%; left: 0; width: 100%; position: absolute; height: inherit;
-  transition: transform 1000ms;
-  &.multiple{gap: $spacing;
-    @for $index from 0 through 6{
-      .gap--#{$index}-em  &{gap: 1em*$index ;}
-      .gap--#{$index}-rem &{gap: 1rem*$index ;}
-    }
+.sliderFW__wrapper{
+  display: flex; 
+  height: 100%; 
+  width: 100%; 
+  height: inherit;
+  will-change: translate;
+  translate: 0;
+  gap: var(--items-gap);
+  // translate: calc(-100% / var(--items-per-row) * var(--item-active));
+  translate: calc(-100% / var(--items-per-row) * var(--item-active) - (var(--items-gap)* (var(--item-active) / var(--items-per-row))));
+  .sliderFW.moving &{
+    transition: translate var(--transition-duration) var(--transition-function);
   }
 }
-.sliderFW__item{text-decoration: none; color: inherit; overflow: hidden; position: relative; display: block; width: 100%; height: inherit; flex-shrink: 0;    
+.sliderFW__rail{@extend .sliderFW__wrapper !optional;}
+.sliderFW__item{
+  text-decoration: none; 
+  color: inherit; 
+  overflow: hidden; 
+  position: relative; 
+  display: block; 
+  width: 100%; 
+  // width: calc(100% / var(--items-per-row));
+  width: calc((100% - var(--items-gap) * (var(--items-per-row) - 1))  / var(--items-per-row));
+  height: inherit; 
+  flex-shrink: 0;
   display: grid; grid-auto-flow: column; grid-auto-columns: 1fr; gap: inherit;
-  cursor: grab;
-  .sliderFW[data-swipe="false"] &{cursor: auto;}
-  .sliderFW[data-transition="none"] &,
-  .sliderFW[data-transition="fade"] & {position: absolute; top: 0; left: 0; opacity: 0; transition: opacity 1.5s;
-    &.active{z-index: 1; opacity: 1;}
-  }
-  .sliderFW[data-transition="none"] &{transition: none;}
-  .sliderFW[data-duration]:not([data-duration=""]) &{transition-duration: inherit;}
 }
-.sliderFW__subitem{position: relative; height: inherit;}
-.sliderFW__item__bg{width: 100%; height: 100%; @include img-container(cover);
-  @for $index from 0 through 10 {
-    .img__opacity--#{$index} &{opacity: $index*.1;}
-  }
-}
-.sliderFW__item__content{
-  position: absolute; z-index: 0; left: 0; top: 0; 
-  width: 100%; height: 100%; max-width: 100%;
-  display: flex; flex-direction: row; flex-wrap: wrap; justify-content: flex-start; align-items: center;
-
-  // padding start
-  padding: $minPadding;
-  @include media-min(xxs){ padding: $minPadding*2;}
-  @include media-min(md) { padding-left: 15%; padding-right: 15%;}
-
-  .sliderFW[class*="content--"] &, .sliderFW__item[class*="content--"] &{ 
-    @include media-min(xxs){ 
-      padding-left: 5%; padding-left: clamp($minPadding,5%,5%);
-      padding-right: 5%; padding-right: clamp($minPadding,5%,5%);
-    }
-    @include media-min(md) { 
-      padding-left: 5%; padding-left: clamp($minPadding,5%,5%);
-      padding-right: 5%; padding-right: clamp($minPadding,5%,5%);
-    }
-  }
-  .sliderFW[data-arrows="true"] &{
-    padding: $minPadding clamp(40px, $minPadding, $minPadding); 
-    @include media-min(xxs){ 
-      padding-left: clamp(60px,$minPadding*2,$minPadding*2); 
-      padding-right: clamp(60px,$minPadding*2,$minPadding*2);
-    }
-    @include media-min(md){ 
-      padding-left: clamp(60px,15%,15%); 
-      padding-right: clamp(60px,15%,15%);
-    }
-    // @include media-min(md) { padding: $minPadding*2 clamp(60px,15%,15%);}
-  }
-  .sliderFW[class*="content--"][data-arrows="true"] &{ 
-    padding: clamp($minPadding,5%,5%) clamp(60px, 5%, 5%); 
-    @include media-min(xxs){ 
-      padding: clamp($minPadding*2,5%,5%) clamp(60px, 5%, 5%); 
-      padding-left: clamp(60px,5%,5%); 
-      padding-right: clamp(60px,5%,5%);
-    }
-  }
-  //padding end
-  
+.sliderFW__subitem{position: relative;display: grid;}
+.sliderFW__item__bg{grid-column: 1; grid-row: 1; @include img-container(cover,transparent); }
+.sliderFW__item__content{grid-column: 1; grid-row: 1; z-index: 1;
+  .content--v--center &{align-self: center;}
+  .content--v--start  &,
+  .content--v--top    &{align-self: start;}
+  .content--v--end    &,
+  .content--v--bottom &{align-self: end;}
   .content--h--center &{justify-content: center;}
-  .content--h--left &{justify-content: flex-start;}
-  .content--h--right &{justify-content: flex-end;}
-  .content--v--center &{ align-items: center;}
-  .content--v--top &{align-items: flex-start;}
-  .content--v--bottom &{align-items: flex-end;}
-
-  // p{max-width: body(line-height)*45ch; }
-
-  @each $key, $value in $colors{
-    .content__bg--#{$key} &:after{@include pseudo(); top: 0; left: 0; width: 100%; height: 100%; z-index: -1; background-color: $value;}
-  }
-  @for $index from 0 through 10 {
-    .content__bg__opacity--#{$index} &:after{opacity: $index*.1;}
-  }
-} 
-.sliderFW__item__content__wrapper{max-width: 100%; @include lastChildNoMargin(); }
-
-.sliderFW__nav{@include flex-container(row,wrap,center); position: absolute; bottom: 0; width: 100%; z-index: 1; padding: 0 0.5rem;
-  .nav--below  & {position: relative;}
-  .nav--hidden &  {display: none;}
-  .nav--left &    {@include justify-content(flex-start);}
-  .nav--right &   {@include justify-content(flex-end);}
-  .nav--bottom &  {bottom: 0; top: auto;}
-  .nav--top &     {bottom: auto; top: 0;}
+  .content--h--start  &,
+  .content--h--left   &{justify-content: start;}
+  .content--h--end    &,
+  .content--h--right  &{justify-content: end;}
 }
 
-.sliderFW__nav__item{display: inline-block; width: 2rem; height: 45px; position: relative; cursor: pointer;
-  &:before{content:"";position: absolute; top: 50%; left: 50%; @include transform(translate(-50%,-50%)); width: 0.8rem; height: 0.8rem; border-radius: 100%; background-color: color(greylight); @include transition(background-color 0.2s); box-shadow: 0px 0px 4px color(greystrong);}
-  &:hover:before,
-  &.active:before{background-color: $primary; @include box-shadow(unquote('inset 0 2px 0 -1px rgba(255,255,255,0.5), inset 0 -2px 0 -1px rgba(0,0,0,0.3), 0 0 0 1px '+$primary));}
-}
 
-.sliderFW__arrow{width: 60px; height: 150px; position: absolute; z-index: 1; cursor: pointer; top: 50%; transform: translateY(-50%);
-  @include media-max(xxs){width: 40px;}
-  &:after{ 
-    @include pseudo();
-    @include size(2.5rem);
-    @include media-max(xxs){@include size(2rem);}
-    opacity: 0.3;
-    border: 4px solid currentColor;
-    border-left: 0;
-    border-top: 0;
-    border-bottom-right-radius: 2px;
-    top: 50%;
-    left: 60%;
-    transition: all 0.4s;
-    transform: translate(-50%,-50%) rotateX(0deg) rotateZ(135deg) skew(-20deg,-20deg);
-    margin-top: 0;
+
+.v1{
+  $minPadding : 45px;
+  .sliderFW{margin-bottom: $spacing; padding: 0;  font-size: 1.25rem; font-weight: 300; position: relative;
+    @for $index from 1 through 6{
+      .sliderFW__item__title{margin-bottom: 0.5rem;}
+      &.title--1, .title--1{
+        .sliderFW__item__title{font-size:3.5rem;font-size: calc(1.2rem + 2vw); line-height: 1.2;font-weight: 300;}
+      }
+      &.title--2, .title--2{
+        .sliderFW__item__title{font-size:4rem;font-size: calc(1.2rem + 2.5vw); line-height: 1.2;font-weight: 300;}
+      }
+      &.title--3, .title--3{
+        .sliderFW__item__title{font-size:4.5rem;font-size: calc(1.2rem + 3vw); line-height: 1.2;font-weight: 300;}
+      }
+      &.title--4, .title--4{
+        .sliderFW__item__title{font-size:5rem;font-size: calc(1.2rem + 3.5vw); line-height: 1.2;font-weight: 300;}
+      }
+    }
+
+
+    &[data-nbitems]:not([data-nbitems=""]):not([data-nbitems="1"]){
+      &:not(.loaded){
+        .sliderFW__item{opacity: 0;pointer-events: none;}
+      }
+    }
   }
-  &:hover:after{opacity: 1; }
-  &.prev{left: 0;}
-  &.next{right: 0;
-    &:after{border: 4px solid currentColor; border-right: 0; border-bottom: 0; transform: translate(50%,-50%) rotateX(0deg) rotateZ(135deg) skew(-20deg,-20deg); left: auto; right: 60%;}
+  .sliderFW__container{ position: relative; height: inherit; overflow: hidden; }
+  .sliderFW__rail{display: flex; height: 100%; left: 0; width: 100%; position: absolute; height: inherit;
+    transition: transform 1000ms;
+    &.multiple{gap: $spacing;
+      @for $index from 0 through 6{
+        .gap--#{$index}-em  &{gap: 1em*$index ;}
+        .gap--#{$index}-rem &{gap: 1rem*$index ;}
+      }
+    }
+  }
+  .sliderFW__item{text-decoration: none; color: inherit; overflow: hidden; position: relative; display: block; width: 100%; height: inherit; flex-shrink: 0;    
+    display: grid; grid-auto-flow: column; grid-auto-columns: 1fr; gap: inherit;
+    cursor: grab;
+    .sliderFW[data-swipe="false"] &{cursor: auto;}
+    .sliderFW[data-transition="none"] &,
+    .sliderFW[data-transition="fade"] & {position: absolute; top: 0; left: 0; opacity: 0; transition: opacity 1.5s;
+      &.active{z-index: 1; opacity: 1;}
+    }
+    .sliderFW[data-transition="none"] &{transition: none;}
+    .sliderFW[data-duration]:not([data-duration=""]) &{transition-duration: inherit;}
+  }
+  .sliderFW__subitem{position: relative; height: inherit;}
+  .sliderFW__item__bg{width: 100%; height: 100%; @include img-container(cover);
+    @for $index from 0 through 10 {
+      .img__opacity--#{$index} &{opacity: $index*.1;}
+    }
+  }
+  .sliderFW__item__content{
+    position: absolute; z-index: 0; left: 0; top: 0; 
+    width: 100%; height: 100%; max-width: 100%;
+    display: flex; flex-direction: row; flex-wrap: wrap; justify-content: flex-start; align-items: center;
+
+    // padding start
+    padding: $minPadding;
+    @include media-min(xxs){ padding: $minPadding*2;}
+    @include media-min(md) { padding-left: 15%; padding-right: 15%;}
+
+    .sliderFW[class*="content--"] &, .sliderFW__item[class*="content--"] &{ 
+      @include media-min(xxs){ 
+        padding-left: 5%; padding-left: clamp($minPadding,5%,5%);
+        padding-right: 5%; padding-right: clamp($minPadding,5%,5%);
+      }
+      @include media-min(md) { 
+        padding-left: 5%; padding-left: clamp($minPadding,5%,5%);
+        padding-right: 5%; padding-right: clamp($minPadding,5%,5%);
+      }
+    }
+    .sliderFW[data-arrows="true"] &{
+      padding: $minPadding clamp(40px, $minPadding, $minPadding); 
+      @include media-min(xxs){ 
+        padding-left: clamp(60px,$minPadding*2,$minPadding*2); 
+        padding-right: clamp(60px,$minPadding*2,$minPadding*2);
+      }
+      @include media-min(md){ 
+        padding-left: clamp(60px,15%,15%); 
+        padding-right: clamp(60px,15%,15%);
+      }
+      // @include media-min(md) { padding: $minPadding*2 clamp(60px,15%,15%);}
+    }
+    .sliderFW[class*="content--"][data-arrows="true"] &{ 
+      padding: clamp($minPadding,5%,5%) clamp(60px, 5%, 5%); 
+      @include media-min(xxs){ 
+        padding: clamp($minPadding*2,5%,5%) clamp(60px, 5%, 5%); 
+        padding-left: clamp(60px,5%,5%); 
+        padding-right: clamp(60px,5%,5%);
+      }
+    }
+    //padding end
+    
+    .content--h--center &{justify-content: center;}
+    .content--h--left &{justify-content: flex-start;}
+    .content--h--right &{justify-content: flex-end;}
+    .content--v--center &{ align-items: center;}
+    .content--v--top &{align-items: flex-start;}
+    .content--v--bottom &{align-items: flex-end;}
+
+    // p{max-width: body(line-height)*45ch; }
+
+    @each $key, $value in $colors{
+      .content__bg--#{$key} &:after{@include pseudo(); top: 0; left: 0; width: 100%; height: 100%; z-index: -1; background-color: $value;}
+    }
+    @for $index from 0 through 10 {
+      .content__bg__opacity--#{$index} &:after{opacity: $index*.1;}
+    }
+  } 
+  .sliderFW__item__content__wrapper{max-width: 100%; @include lastChildNoMargin(); }
+
+  .sliderFW__nav{@include flex-container(row,wrap,center); position: absolute; bottom: 0; width: 100%; z-index: 1; padding: 0 0.5rem;
+    .nav--below  & {position: relative;}
+    .nav--hidden &  {display: none;}
+    .nav--left &    {@include justify-content(flex-start);}
+    .nav--right &   {@include justify-content(flex-end);}
+    .nav--bottom &  {bottom: 0; top: auto;}
+    .nav--top &     {bottom: auto; top: 0;}
+  }
+
+  .sliderFW__nav__item{display: inline-block; width: 2rem; height: 45px; position: relative; cursor: pointer;
+    &:before{content:"";position: absolute; top: 50%; left: 50%; @include transform(translate(-50%,-50%)); width: 0.8rem; height: 0.8rem; border-radius: 100%; background-color: color(greylight); @include transition(background-color 0.2s); box-shadow: 0px 0px 4px color(greystrong);}
+    &:hover:before,
+    &.active:before{background-color: $primary; @include box-shadow(unquote('inset 0 2px 0 -1px rgba(255,255,255,0.5), inset 0 -2px 0 -1px rgba(0,0,0,0.3), 0 0 0 1px '+$primary));}
+  }
+
+  .sliderFW__arrow{width: 60px; height: 150px; position: absolute; z-index: 1; cursor: pointer; top: 50%; transform: translateY(-50%);
+    @include media-max(xxs){width: 40px;}
+    &:after{ 
+      @include pseudo();
+      @include size(2.5rem);
+      @include media-max(xxs){@include size(2rem);}
+      opacity: 0.3;
+      border: 4px solid currentColor;
+      border-left: 0;
+      border-top: 0;
+      border-bottom-right-radius: 2px;
+      top: 50%;
+      left: 60%;
+      transition: all 0.4s;
+      transform: translate(-50%,-50%) rotateX(0deg) rotateZ(135deg) skew(-20deg,-20deg);
+      margin-top: 0;
+    }
+    &:hover:after{opacity: 1; }
+    &.prev{left: 0;}
+    &.next{right: 0;
+      &:after{border: 4px solid currentColor; border-right: 0; border-bottom: 0; transform: translate(50%,-50%) rotateX(0deg) rotateZ(135deg) skew(-20deg,-20deg); left: auto; right: 60%;}
+    }
   }
 }
